tests/toy/neg/001536_mutation.toylang
program a = { var then : bool; } .
